--- a/.jshintrc
+++ b/.jshintrc
@@ -8,7 +8,7 @@
     "noempty": true,
     "nonew": true,
     "undef": true,
-    "unused": "paramsignore",
+    "unused": "vars",
     "trailing": true,
     "indent": 4,
     "boss": true,
