--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "jasmine-node": "1.2.2",
     "sandboxed-module": "0.1.4",
     "montage-testing": "git+ssh://git@github.com:montagejs/montage-testing.git#edge",
-    "jshint": "1.1.0"
+    "jshint": "2.3.0"
   },
   "mappings": {
     "filament-extension": {
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "test": "node test/run.js",
-    "lint": "node test/lint.js"
+    "lint": "jshint ."
   },
   "manifest": true
 }
