Formalize the cross window message channel
This adds some specs and possibly over-engineers the back and forth
of the local editing context and the "remote" one within the frame.

This is arguably the basis for some of the concepts of our data-layer
work, but built by hand without the benefit of Q-connection for the
moment.

I'm fleshing it out this way and will clean up later.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "devDependencies": {
     "jasmine-node": "1.2.2",
     "sandboxed-module": "0.1.4",
-    "montage-testing": "git+ssh://git@github.com:montagejs/montage-testing.git#edge",
+    "montage-testing": "0.2.0",
     "jshint": "2.3.0"
   },
   "mappings": {
