Revert "trying to load the aligner in an extension"
This reverts commit c56894535ab4d1b6fab1e8d72fb3499f4b58579b.

--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "q": "0.9.5",
     "q-connection": "0.5.6",
     "q-io": "~1.9.3",
-    "pdf.js": "git+ssh://git@github.com:ducarroz/pdf.js.git#master",
-    "audio-aligner": "git+ssh://git@github.com:cesine/audio-aligner.git"
+    "pdf.js": "git+ssh://git@github.com:ducarroz/pdf.js.git#master"
   },
   "devDependencies": {
     "jasmine-node": "1.2.2",
